# rules_rust

./: WORKSPACE.bazel
.bazelci/: presubmit.yml
.github/workflows/: release.yaml
bindgen/: bindgen.bzl
cargo/: cargo_build_script.bzl
crate_universe/: BUILD.bazel  Cargo.toml  crates_deps.bzl  defs.bzl  docs.bzl  repositories.bzl
crate_universe/private/: BUILD.bazel  cargo_bazel.bzl  crate.bzl  crate_index.bzl  crate_repository.bzl  crate_targets.bzl  crates_repository.bzl  format.bzl  generate_utils.bzl  splicing_utils.bzl  srcs.bzl  urls.bzl
crate_universe/private/templates/: BUILD.crate.bazel  BUILD.crates_repository.bazel  defs.crates_repository.bzl  manifest.crates_repository.bzl
crate_universe/src/: config.rs  context.rs  lib.rs  metadata.rs  splicing.rs  utils.rs
crate_universe/src/cli/: generate.rs  splice.rs
crate_universe/src/context/: crate_context.rs
crate_universe/src/metadata/: dependency.rs
crate_universe/src/splicing/: splicer.rs
crate_universe/test_data/metadata/build_scripts/: Cargo.toml
crate_universe/tools/: BUILD.bazel  defs.bzl
crate_universe/tools/copy_file/: BUILD.bazel  Cargo.toml
crate_universe/tools/copy_file/src/: main.rs
docs/: crate_universe.md  flatten.md  rust_bindgen.md
examples/crate_universe/multi_package/sub_pkgs/pkg_b/: Cargo.toml
rust/: toolchain.bzl
rust/private/: repository_utils.bzl  rust.bzl  toolchain_utils.bzl
test/rust_toolchain_template_variable_info/: BUILD.bazel  defs.bzl
test/rust_toolchain_template_variable_info/src/: main.rs
test/rustc_env_from_toolchain/: BUILD.bazel  output_test.sh
test/rustc_env_from_toolchain/src/: main.rs
wasm_bindgen/: repositories.bzl
