filegroup(
    name = "distro",
    srcs = [
        "BUILD.bazel",
        "//crate_universe/tools/cross_installer:distro",
    ],
    visibility = ["//crate_universe:__subpackages__"],
)

filegroup(
    name = "bzl_srcs",
    srcs = [
        "//crate_universe/tools/cross_installer:bzl_srcs",
    ],
    visibility = ["//crate_universe:__subpackages__"],
)
