load("//rust:defs.bzl", "rust_binary")
load(
    "//test/rust_toolchain_template_variable_info:defs.bzl",
    "rust_toolchain_template_variable_info_test",
)

rust_binary(
    name = "bin",
    srcs = ["src/main.rs"],
    edition = "2021",
)

rust_toolchain_template_variable_info_test(
    name = "rust_toolchain_template_variable_info_test",
    args = [
        "--cargo=$(CARGO)",
        "--rustc=$(RUSTC)",
    ],
)
