load("//rust:defs.bzl", "rust_binary")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "hello_env",
    srcs = ["src/main.rs"],
    edition = "2018",
    rustc_env = {
        "CUSTOM_RUSTC_FROM_TOOLCHAIN": "$(RUSTC)",
    },
)

sh_test(
    name = "output_test",
    srcs = ["output_test.sh"],
    args = ["$(location :hello_env)"],
    data = [":hello_env"],
)
